Rules evaluation against journald